--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <h2>Contact</h2>
       <p>Email: <a href="mailto:vmbharumeenu@gmail.com">vmbharumeenu@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Bharathi2209" target="_blank">Bharathi2209</a></p>
+
+      <hr style="margin-top: 30px; margin-bottom: 20px;" />
       <a href="resume.pdf" download class="resume-btn">📄 Download Resume</a>
     </section>
   </div>
- 
-
 </body>
 </html>
