--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
     <section class="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:vmbharumeenu@gmail.com">vmbharumeenu@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/Bharathi2209" target="_blank">Bharathi2209</a></p>
+
+      <div class="social-icons">
+        <a href="https://github.com/Bharathi2209" target="_blank">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+        </a>
+        <a href="https://www.linkedin.com/in/bharathi-murali-494317259" target="_blank">
+          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+        </a>
+      </div>
 
       <hr style="margin-top: 30px; margin-bottom: 20px;" />
       <a href="resume.pdf" download class="resume-btn">📄 Download Resume</a>
