Fix social icons using local images

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
       <div class="social-icons">
         <a href="https://github.com/Bharathi2209" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" />
+          <img src="github.png" alt="GitHub" />
         </a>
         <a href="https://www.linkedin.com/in/bharathi-murali-494317259" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" />
+          <img src="linkedin.png" alt="LinkedIn" />
         </a>
       </div>
 
