--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
       <div class="social-icons">
         <a href="https://github.com/Bharathi2209" target="_blank">
-          <img src="github.png" alt="GitHub" />
+          <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="GitHub" />
         </a>
         <a href="https://www.linkedin.com/in/bharathi-murali-494317259" target="_blank">
-          <img src="linkedin.png" alt="LinkedIn" />
+          <img src="https://img.icons8.com/ios-filled/30/0077b5/linkedin.png" alt="LinkedIn" />
         </a>
       </div>
 
