--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 
     <section class="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:vmbharumeenu@gmail.com">vmbharumeenu@gmail.com</a></p>
+      <p>
+      <img src="https://img.icons8.com/ios-filled/30/000000/new-post.png" alt="Email" class="icon" />
+      <a href="mailto:vmbharumeenu@gmail.com">vmbharumeenu@gmail.com</a>
+     </p>
+
 
       <div class="social-icons">
         <a href="https://github.com/Bharathi2209" target="_blank">
