Update: Added icons and finalized layout

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <section class="contact">
       <h2>Contact</h2>
       <p>
-      <img src="https://img.icons8.com/ios-filled/30/000000/new-post.png" alt="Email" class="icon" />
-      <a href="mailto:vmbharumeenu@gmail.com">vmbharumeenu@gmail.com</a>
-     </p>
-
+        <a href="mailto:vmbharumeenu@gmail.com" target="_blank">
+          <img src="https://img.icons8.com/ios-filled/24/000000/email.png" alt="Email" class="icon" />
+          vmbharumeenu@gmail.com
+        </a>
+      </p>
 
       <div class="social-icons">
         <a href="https://github.com/Bharathi2209" target="_blank">
